Remove obselete testcases